syntax = "proto3"; //proto 문법 버전 정의

package com.example.demo.batch;
option java_package = "com.example.demo.batch"; //java 패키지를 명시적으로 지정

service InactiveUserJobService{
  rpc LaunchInactiveUserJob (LaunchInactiveUserJobRequest) returns (LaunchInactiveUserJobResponse);
}

message LaunchInactiveUserJobRequest {

}

message LaunchInactiveUserJobResponse {

}